// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block should render correctly 1`] = `
<div
  className={null}
  onClick={null}
  style={
    Object {
      "display": "block",
      "flex": 0,
    }
  }
/>
`;

exports[`Box should allow overriding of default styles 1`] = `
<div
  className={null}
  style={
    Object {
      "alignContent": "flex-end",
      "alignItems": "stretch",
      "color": "red",
      "display": "flex",
      "flex": 0,
      "flexDirection": "column",
      "flexShrink": 1,
      "position": "relative",
    }
  }
/>
`;

exports[`Box should allow passing spacing scales 1`] = `
<div
  className={null}
  style={
    Object {
      "alignContent": "flex-start",
      "alignItems": "stretch",
      "display": "flex",
      "flexDirection": "column",
      "flexShrink": 0,
      "margin": "8px 16px 24px",
      "paddingTop": "8px",
      "position": "relative",
    }
  }
/>
`;

exports[`Box should allow passing vector style values 1`] = `
<div
  className={null}
  style={
    Object {
      "alignContent": "flex-start",
      "alignItems": "stretch",
      "display": "flex",
      "flexDirection": "column",
      "flexShrink": 0,
      "margin": "0px 5px 10% 15px",
      "padding": "15px ",
      "position": "relative",
    }
  }
/>
`;

exports[`Box should render correctly 1`] = `
<div
  className={null}
  style={
    Object {
      "alignContent": "flex-start",
      "alignItems": "stretch",
      "display": "flex",
      "flexDirection": "column",
      "flexShrink": 0,
      "position": "relative",
    }
  }
/>
`;

exports[`Flex should render correctly 1`] = `
<div
  className={null}
  onClick={null}
  style={
    Object {
      "display": "flex",
      "flex": 0,
    }
  }
/>
`;

exports[`Inline should render correctly 1`] = `
<span
  className={null}
  onClick={null}
  style={
    Object {
      "display": "inline-block",
      "flex": 0,
      "verticalAlign": "bottom",
    }
  }
/>
`;

exports[`InlineFlex should render correctly 1`] = `
<span
  className={null}
  onClick={null}
  style={
    Object {
      "display": "inline-flex",
      "flex": 0,
    }
  }
/>
`;
